compiler/testData/cli/jvm/languageVersion/languageVersion.out
compiler/testData/cli/jvm/languageVersion/languageVersion.kt:6:16: error: the feature "break continue in inline lambdas" is only available since language version 2.2
               break
               ^^^^^
COMPILATION_ERROR
