compiler/testData/cli/jvm/languageVersion/languageVersion.kt
package test

fun test(a: Any) {
     while (true) {
          run {
               break
          }
     }
}
